[gd_scene load_steps=2 format=3 uid="uid://b2w2mnphfe1gf"]

[ext_resource type="Script" path="res://dash.gd" id="1_vjdi0"]

[node name="BurstDash" type="Node2D"]
script = ExtResource("1_vjdi0")

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
